@@ -1,3 +1,11 @@
+2006-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/foreign.R (read.graph, write.graph) : 
+	dimacs format added
+	(read.graph.dimacs, write.graph.dimacs) : added
+	* interfaces/R/src/rinterface.c (R_igraph_read_graph_dimacs)
+	(R_igraph_write_graph_dimacs) : added
+
 2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (graph.density) :
